--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <div class="navbar">
         <ul>
           <li>
-            <a href="companies.html"><button>About Us <BR><br></button></a>
+            <a href="about.html"><button>About Us <BR><br></button></a>
           </li>
           <li>
-            <a href="gold.html"><button>Exchange<br>Rates</button></a>
+            <a href=""><button>Exchange<br>Rates</button></a>
           </li>
           <li>
-            <a href="master.html"><button>Our <br> Chart</button></a>
+            <a href=""><button>Our <br> Chart</button></a>
 
-            <a href="master.html"><button>Contact <br> Us</button></a>
+            <a href=""><button>Contact <br> Us</button></a>
             
           </li>
         </ul>
         <div class="center">
           <h1>
-            Bitcoin<br />
-            Exchanges
+            Fredrick<br />
+            Forex
           </h1>
           <p>
             <br />Lorem ipsum dolor sit amet. 
